# sensei-ir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/analyses/: Cargo.toml
crates/analyses/src/: basic_block_ownership.rs  cfg_in_out_bundling.rs  display.rs  lib.rs
crates/assembler/src/: lib.rs  op.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/fuzz/: Cargo.toml  README.md
crates/codegen/fuzz/fuzz_targets/: fuzz.rs
crates/codegen/src/: error.rs  gas.rs  lib.rs  marks.rs  memory.rs  property_tests.rs  revm_tests.rs  test_helpers.rs  test_operations.rs
crates/codegen/src/gas/: mod.rs
crates/codegen/src/tests/: helpers.rs  mod.rs  operations.rs  property.rs  revm.rs
crates/codegen/src/tests/helpers/: builders.rs  constants.rs  macros.rs  mod.rs
crates/codegen/src/tests/integration_tests/: basic_ops.rs  control_ops.rs  io_ops.rs
crates/codegen/src/tests/prop_tests/: arithmetic_ops.rs  bitwise_and_comparison.rs  control_flow.rs  error_conditions.rs  helpers.rs  memory_and_storage.rs
crates/codegen/src/tests/unit_tests/: arithmetic_and_bitwise.rs  control_flow.rs  evm_context.rs  memory_and_storage.rs  mod.rs
crates/codegen/src/translator/: control_flow.rs  helpers.rs  initialization.rs  locals.rs  marks.rs  memory.rs  mod.rs  operations.rs
crates/data/: Cargo.toml
crates/data/src/: builder.rs  index.rs  lib.rs  operation.rs
crates/data/src/analysis/: basic_block_ownership.rs  mod.rs
crates/data/src/operation/: mod.rs  op_data.rs  op_fmt.rs
crates/data/src/snapshots/: eth_ir_data__tests__display_with_data.snap
crates/debug-backend/: Cargo.toml
crates/debug-backend/fuzz/: Cargo.toml  README.md
crates/debug-backend/fuzz/fuzz_targets/: fuzz.rs
crates/debug-backend/proptest-regressions/tests/prop_tests/: arithmetic_ops.txt  bitwise_and_comparison.txt  control_flow.txt  error_conditions.txt  memory_and_storage.txt
crates/debug-backend/src/: lib.rs  static_memory_layout.rs
crates/debug-backend/src/tests/: mod.rs
crates/debug-backend/src/tests/helpers/: builders.rs  constants.rs  macros.rs  mod.rs
crates/debug-backend/src/tests/integration_tests/: basic_ops.rs  control_ops.rs  io_ops.rs  mod.rs
crates/debug-backend/src/tests/prop_tests/: arithmetic_ops.rs  bitwise_and_comparison.rs  control_flow.rs  error_conditions.rs  helpers.rs  memory_and_storage.rs  mod.rs
crates/debug-backend/src/tests/unit_tests/: arithmetic_and_bitwise.rs  control_flow.rs  evm_context.rs  memory_and_storage.rs
crates/debug-backend/src/translator/: control_flow.rs  helpers.rs  initialization.rs  locals.rs  marks.rs  mod.rs  operations.rs
crates/parser/: Cargo.toml
crates/parser/src/: emit.rs  lexer.rs  lib.rs  parser.rs
crates/simple-backend/: Cargo.toml
crates/simple-backend/src/: lib.rs
docs/: ir_text_format.md
sir-solidity-diff-tests/test/: ArithmeticLogic.t.sol  BaseTest.sol  SimpleDataRet.t.sol
test-utils/: Cargo.toml
test-utils/src/: lib.rs
test-utils/src/parser/: lexer.rs  mod.rs  parser.rs  parser_tests.rs  parser_tests.rs.txt  parsing.rs  snapshot_tests.rs
