[workspace]
resolver = "2"
members = ["crates/*", "test-utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
eth-ir-data = { path = "crates/data" }
sir-analyses = { path = "crates/analyses" }
sir-parser = { path = "crates/parser" }

alloy-primitives = "1.1.2"
thiserror = "2.0.17"
evm-glue = { git = "https://github.com/Philogy/evm-glue.git", rev = "6be3e8c8" }
