[package]
name = "eth-ir-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-ir-data = { workspace = true }
evm-glue = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
hex-literal = "0.4.1"