[package]
name = "eth-ir-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-ir-data = { workspace = true }
evm-glue = { workspace = true }
alloy-primitives = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"
revm = { version = "14.0.0", default-features = false, features = ["std"] }
anyhow = "1.0"
proptest = "1.4"