[package]
name = "sir-debug-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sir-data.workspace = true
evm-glue.workspace = true
alloy-primitives.workspace = true
smallvec.workspace = true

[dev-dependencies]
hex-literal = "0.4.1"
anyhow = "1.0"
proptest = "1.4"
test-utils = { path = "../../test-utils" }
sir-parser.workspace = true
bumpalo = { version = "3.19.0", features = ["collections"] }
guillotine-rs = "0.1.0"

