[package]
name = "sir-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos = "0.15.1"
chumsky = "0.11.1"
thiserror.workspace = true
bumpalo = {version = "3.19.0", features=["collections"]}
sir-data.workspace = true
alloy-primitives.workspace = true
smallvec = "1.15.1"

[dev-dependencies]
test-utils = { path = "../../test-utils" }
