[package]
name = "sir-codegen-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
sir-data = { path = "../../data" }
sir-debug-backend = { path = ".." }
alloy-primitives = "1.1.2"

[[bin]]
name = "fuzz"
path = "fuzz_targets/fuzz.rs"
test = false
doc = false
